--- a/meson.build
+++ b/meson.build
@@ -226,12 +226,13 @@ imgui_options = [
   'dx12=disabled',
   'metal=disabled',
   'opengl=disabled',
+  'sdl_renderer=disabled',
   'vulkan=disabled',
+  'webgpu=disabled',
   'glfw=disabled',
   'sdl2=disabled',
   'osx=disabled',
   'win=disabled',
-  'marmalade=disabled',
   'allegro5=disabled',
 ]
 
